--- a/src/main/resources/com/example/practicainformescristianalejandropardo/VistaPrincipal.fxml
+++ b/src/main/resources/com/example/practicainformescristianalejandropardo/VistaPrincipal.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -37,7 +38,10 @@
                   <Insets left="20.0" right="20.0" />
                </padding>
             </GridPane>
-            <ComboBox fx:id="equipos" layoutX="130.0" layoutY="133.0" prefHeight="42.0" prefWidth="147.0" style="-fx-border-color: #ff4747; -fx-prompt-text-fill: #ffffff; -fx-background-color: #2c2c2c; -fx-padding: 5px; -fx-font-size: 14px; -fx-border-radius: 3;" />
+            <ComboBox fx:id="equipos" layoutX="130.0" layoutY="133.0" prefHeight="42.0" prefWidth="147.0" style="-fx-border-color: #ff4747; -fx-prompt-text-fill: #ffffff; -fx-background-color: #2c2c2c; -fx-padding: 5px; -fx-font-size: 14px; -fx-border-radius: 3;">
+               <tooltip>
+                  <Tooltip text="Si no seleccionas nada te enseñara el máximo de lo que elijas de toda la liga" />
+               </tooltip></ComboBox>
             <Label alignment="CENTER" layoutX="106.0" layoutY="39.0" prefHeight="74.0" prefWidth="196.0" style="-fx-border-color: #ff4747; -fx-border-radius: 3;" text="Selecciona el equipo" textAlignment="CENTER" textFill="WHITE" />
 
          </children>
